# wbc_msgs

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  manifest.xml  package.xml
msg/: RadialPotentialField.msg  RadialPotentialFieldVector.msg  RigidBodyState.msg  TaskActivation.msg  TaskStatus.msg  TaskWeights.msg  WbcTimingStats.msg
