<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wbc_msgs</name>
  <version>0.1.0</version>
  <description>ROS msgs for wbc library</description>

  <maintainer email="dennis.mronga@dfki.de">Dennis Mronga</maintainer>
  <license>BSD-3</license>
  <url type="https://arc-opt.github.io/Documentation"></url>
  <author email="dennis.mronga@dfki.de">Dennis Mronga</author>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
